# indie-game

./: CMakeLists.txt  LICENSE  README.md
graphics/: Spritesheet.xcf
include/: character.hpp  direction.hpp  game.h  game.hpp
src/: character.cpp  game.cpp  input.cpp  main.cpp
